# LangGraph-Langchain-Agenst

./: .gitignore  README.md
agent-chat-ui/: next.config.mjs  package.json
agent-chat-ui/src/app/api/[..._path]/: route.ts
agent-chat-ui/src/components/thread/: index.tsx
agent-chat-ui/src/lib/: agent-options.ts
agent-chat-ui/src/providers/: Stream.tsx
first-deep-agent/: .env.example  BEST_PRACTICE_PLAN.md  README.md  langgraph.json  pyproject.toml
first-deep-agent/src/deep_agent/: fleet.py  graph.py
first-deep-agent/tests/integration_tests/: test_graph.py
first-deep-agent/tests/unit_tests/: test_fleet.py
