[project]
name = "deep-agent-template"
version = "0.1.0"
description = "Deep Agent template for LangSmith/LangGraph deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.0",
    "langgraph>=1.0.0",
    "langgraph-sdk>=0.1.0",
    "langchain-openai>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langsmith>=0.8.0",
    "python-dotenv>=1.0.1",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-chroma>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-community>=0.4.0,<0.5.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "managed-deepagents>=0.1.2",
    "langsmith-mcp-server>=0.1.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "deepagents-cli>=0.2.2",
    "langgraph-cli[inmem]>=0.4.30",
    "pytest>=9.0.3",
    "ruff>=0.8.0",
]

[tool.uv.build-backend]
module-name = "deep_agent"
source-include = ["langgraph.json", ".env.example", "Makefile"]
